# 2024_20563756

./: README.md  date_and_time.cmd  git-cheat-sheet.txt
worksheet-3/FirstProgramme/: FirstProgramme.sln
worksheet-3/FirstProgramme/ConsoleApplication1/: ConsoleApplication1.vcxproj
worksheet3/: adder.cpp  calc.cpp  hello.cpp
worksheet3/adder_dynamic/include/: adder.h
worksheet3/adder_dynamic/lib/: adderlib.exp  adderlib.lib  libadder.exp  libadder.lib
worksheet3/staticRelease/adder_static/lib/: libadder.lib
worksheet4/calc/: CMakeLists.txt  calc.cpp
worksheet4/hello_cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello.sln  hello.vcxproj  hello.vcxproj.filters
worksheet4/hello_cmake/hello.dir/Debug/: hello.exe.recipe  hello.ilk
worksheet4/hello_cmake/hello.dir/Debug/hello.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
worksheet4/hello_cmake/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
worksheet4/hello_cmake/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
